--- a/docs/001_Введение. Нужные программы.md
+++ b/docs/001_Введение. Нужные программы.md
@@ -1,3 +1,9 @@
+---
+layout: default
+title: Введение. Нужные программы
+nav_order: 0
+---
+
 # Введение. Нужные программы
 
 Наша задача - пошагово разработать и запустить блог на Evolution CMS 3-й версии.
