--- a/docs/003_Первоначальные настройки.md
+++ b/docs/003_Первоначальные настройки.md
@@ -1,3 +1,9 @@
+---
+layout: default
+title: Первоначальные настройки
+nav_order: 1
+---
+
 # Первоначальные настройки
 
 Давайте настроим некоторые нужные параметры и установим дополнения.
