--- a/docs/004_Структура сайта и шаблоны.md
+++ b/docs/004_Структура сайта и шаблоны.md
@@ -1,3 +1,9 @@
+---
+layout: default
+title: Структура сайта и шаблоны
+nav_order: 4
+---
+
 # Структура сайта и шаблоны в Evolution CMS
 
 ## Оглавление
