--- a/docs/001_Введение. Нужные программы.md
+++ b/docs/001_Введение. Нужные программы.md
@@ -39,9 +39,9 @@ nav_order: 2
 
 Мои настройки выглядят так:
 
-![openserver settings]({{baseurl}}/assets/images/s1.png)
+![openserver settings]({{ site.baseurl }}/assets/images/s1.png)
 
-![openserver settings]({{baseurl}}/assets/images/s2.png)
+![openserver settings]({{ site.baseurl }}/assets/images/s2.png)
 
 #### _Настройки домена_
 
@@ -53,12 +53,12 @@ nav_order: 2
 
 > Я по привычке добавляю ко всем сайтам, разрабатываемым в локальной среде, суффикс .localhost. Кто-то пишет сразу рабочий домен (evoblog.com), кто-то добавляет .loc - дело вкуса.
 
-![openserver add domain]({{baseurl}}/assets/images/s3.png)
+![openserver add domain]({{ site.baseurl }}/assets/images/s3.png)
 
 Добавляйте папку, перезапустите сервер и попробуйте открыть адрес `http://evoblog.localhost/`.
 Поскольку директория пустая и мы не создали в ней ничего, вы увидите листинг файлов.
 
-![openserver indexof]({{baseurl}}/assets/images/s4.png)
+![openserver indexof]({{ site.baseurl }}/assets/images/s4.png)
 
 Это абсолютно нормальное поведение сервера, в дальнейшем картина изменится.
 
@@ -74,11 +74,11 @@ nav_order: 2
 
 Все конфиги находятся в папке OpenServer `\userdata\config\`. Можете вручную найти там конфиги своего текущего профиля и закомментить ненужное, но проще в Open Server открыть `Меню > Дополнительно > Конфигурация > Ваш Апач или Апач + Nginx`.
 
-![openserver config menu]({{baseurl}}/assets/images/s72.png)
+![openserver config menu]({{ site.baseurl }}/assets/images/s72.png)
 
 Откроется Sublime Text со всеми конфигами текущего профиля. В редакторе нажмите `Shift + Ctrl + F`. По дефолту эта панелька ищет по всем открытым файлам - это нам и надо. Наберите `well-known`, нажмите `Find` и увидите, в каких файлах есть нужное.
 
-![openserver find panel]({{baseurl}}/assets/images/s73.png)
+![openserver find panel]({{ site.baseurl }}/assets/images/s73.png)
 
 Дважды щелкнув по найденному коду, перейдёте в файл и закомментите найденные блоки символами `#`. На всякий случай, вот «ненужные» блоки, которые нужно искать и комментить.
 
@@ -124,7 +124,7 @@ location ~* /\.(?!well-known/) {
 
 Картина должна быть такая:
 
-![vscode]({{baseurl}}/assets/images/s5.png)
+![vscode]({{ site.baseurl }}/assets/images/s5.png)
 
 ## Итог
 
