--- a/docs/006_Шаблон блога. Интеграция дизайна в Evolution CMS.md
+++ b/docs/006_Шаблон блога. Интеграция дизайна в Evolution CMS.md
@@ -1,3 +1,9 @@
+---
+layout: default
+title: Шаблон блога. Интеграция дизайна в Evolution CMS
+nav_order: 7
+---
+
 # Шаблон блога. Интеграция дизайна в Evolution CMS
 
 Сейчас будет сложновато и долго, но оно того стоит.
@@ -36,7 +42,7 @@
 
 Так что открывайте `index.html` и смотрите, что мы будем делать.
 
-![templates](assets/images/s37.png)
+![templates]({{ site.baseurl }}/assets/images/s37.png)
 
 ## Копируем дизайн <a name="part2"></a>
 
@@ -44,7 +50,7 @@
 
 Создайте папку `template` в корне сайта, и скопируйте туда всё содержимое папки `dist` из репозитория.
 
-![templates](assets/images/s38.png)
+![templates]({{ site.baseurl }}/assets/images/s38.png)
 
 Файлы \*.html можно не копировать, они ни на что не влияют. Просто в дальнейшем так удобнее таскать оттуда кусочки кода.
 
@@ -70,7 +76,7 @@
 
 Откройте папку `views` в корне сайта.
 
-![templates](assets/images/s39.png)
+![templates]({{ site.baseurl }}/assets/images/s39.png)
 
 Что-то знакомое - blogs, post, contacts.
 
@@ -89,7 +95,7 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 Откройте файл `main.blade.php`и напишите там слово "главная". Сохраните и перейдите на главную страницу вашего сайта.
 
-![templates](assets/images/s40.png)
+![templates]({{ site.baseurl }}/assets/images/s40.png)
 
 Попробуйте сделать то же самое с другими файлами.
 Если какой-то из шаблонов не работает, проверьте внимательно псевдоним и имя файла. Они должны быть одинаковы.
@@ -105,7 +111,7 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 Именно этим и занят шаблонизатор. Мы задаём некий "шаблон", размечаем его и определяем, в какой области что показывать.
 
-![templates](assets/images/s41.png)
+![templates]({{ site.baseurl }}/assets/images/s41.png)
 
 Я примерно показал на скрине, где будут изменяемые области: тайтл, сайдбар, заголовок и текст поста.
 
@@ -138,7 +144,7 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 Базовый шаблон на этом этапе больше не будем трогать, но обязательно к нему вернёмся.
 
-![templates](assets/images/s42.png)
+![templates]({{ site.baseurl }}/assets/images/s42.png)
 
 > Секция wrapper свернута для удобства - там код.
 
@@ -290,7 +296,7 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 А вот так выглядит папка `views`
 
-![templates](assets/images/s43.png)
+![templates]({{ site.baseurl }}/assets/images/s43.png)
 
 ## Шаблоны. Секции содержимого <a name="part9"></a>
 
@@ -435,11 +441,11 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 Проверьте себя. Главная страница должна содержать верстку всех постов:
 
-![templates](assets/images/s44.png)
+![templates]({{ site.baseurl }}/assets/images/s44.png)
 
 А страница поста - только разметку поста:
 
-![templates](assets/images/s45.png)
+![templates]({{ site.baseurl }}/assets/images/s45.png)
 
 Сделайте нечто похожее для оставшихся шаблонов.
 
