--- a/docs/008_Контроллеры. Пакет main. Выводим анонсы записей в блоге, делаем пагинацию.md
+++ b/docs/008_Контроллеры. Пакет main. Выводим анонсы записей в блоге, делаем пагинацию.md
@@ -1,3 +1,10 @@
+---
+layout: default
+title: Контроллеры. Пакет main. Выводим анонсы записей в блоге, делаем пагинацию
+nav_order: 9
+---
+
+
 # Контроллеры. Пакет main. Выводим анонсы записей в блоге, делаем пагинацию
 
 ## Оглавление
@@ -34,7 +41,7 @@
 
 Для начала открываем консоль сервера и переходим в папку сайта. Дальше идём в папку `core`.
 
-![console](assets/images/s48.png)
+![console]({{ site.baseurl }}/assets/images/s48.png)
 
 Теперь обновим существующие пакеты, чтобы не было ошибок. Пишем команду:
 
@@ -52,7 +59,7 @@ php artisan package:create main
 
 Перейдите в папку `/core/custom/packages/`. Внутри вы должны увидеть папку `main` с разными вложенными папками и файлами.
 
-![console](assets/images/s49.png)
+![console]({{ site.baseurl }}/assets/images/s49.png)
 
 На данном этапе все они нас не особо интересуют, кроме папки `/core/custom/packages/main/src/Controllers`.
 
@@ -166,7 +173,7 @@ class MainController{
 
 Откройте главную страницу сайта, там должно быть напечатано слово `main`.
 
-![dd](assets/images/s50.png)
+![dd]({{ site.baseurl }}/assets/images/s50.png)
 
 Что может пойти не так: неверное имя контроллера, неверное местоположение файла, неверное название класса.
 
@@ -220,7 +227,7 @@ class MainController {
 
 Во вкладке `View` можете увидеть данные, которые в нашем распоряжении. В частности, свежесозданный ключ `anykey` и его значение.
 
-![dd](assets/images/s51.png)
+![dd]({{ site.baseurl }}/assets/images/s51.png)
 
 Откройте шаблон главной страницы и для теста выведите значение.
 
@@ -228,7 +235,7 @@ class MainController {
 {{ $anykey }}
 ```
 
-![dd](assets/images/s52.png)
+![dd]({{ site.baseurl }}/assets/images/s52.png)
 
 ### Используем DocLister
 
@@ -497,7 +504,7 @@ class BlogsController extends BaseController {
 
 В Evolution CMS есть такая сущность - плейсхолдер. Это переменная, доступная всегда и везде. Доклистер засовывает в плейсхолдер `pages` пагинацию, а метод `getPlaceholder` её достаёт оттуда. Вот и всё. Подробности в документации Доклистера.
 
-![pagination](assets/images/s53.png)
+![pagination]({{ site.baseurl }}/assets/images/s53.png)
 
 Вот как должна выглядеть пагинация.
 
