--- a/docs/009_Навигация по сайту.md
+++ b/docs/009_Навигация по сайту.md
@@ -1,9 +1,15 @@
+---
+layout: default
+title: Навигация по сайту
+nav_order: 10
+---
+
 # Навигация по сайту
 
 Давайте сделаем меню блога.
 В дизайне меню выводится в двух местах: шапка блога и боковая панель, которая выезжает по нажатию на "гамбургер" справа.
 
-![menu areas](assets/images/s55.png)
+![menu areas]({{ site.baseurl }}/assets/images/s55.png)
 
 Я планирую разместить в обоих местах абсолютно одинаковые ссылки: "Главная, Блоги, Теги, Контакты".
 
@@ -54,7 +60,7 @@ public function __construct()
 
 Давайте протестируем? Откройте любую страницу сайта и в панели Tracy зайдите во вкладку view
 
-![menu areas](assets/images/s71.png)
+![menu areas]({{ site.baseurl }}/assets/images/s71.png)
 
 Из-за особенностей DLMenu наша менюшка там лежит под индексом [0]. Это надо будет учесть. Раскройте какой-нибудь элемент и посмотрите, какие ключи в нём есть. Мы будем использовать новый ключ `url`, которого нет в обычном `getDocs`.
 
