--- a/docs/015_Наведение красоты.md
+++ b/docs/015_Наведение красоты.md
@@ -1,3 +1,9 @@
+---
+layout: default
+title: Разные мелочи
+nav_order: 16
+---
+
 # Разные мелочи
 
 ## Оглавление
@@ -24,7 +30,7 @@
 
 Я накликал себе нечто подобное
 
-![blog te](assets/images/s67.png)
+![blog te]({{ site.baseurl }}/assets/images/s67.png)
 
 Если вы сделали нечто универсальное, то нажмите "По умолчанию для всех". Это позволит распространить внешний вид на все шаблоны.
 
@@ -90,7 +96,7 @@ $this->evo->documentObject
 
 Зайдите в "Модули" и запустите. Вы увидите примерно такую картину:
 
-![cs](assets/images/s68.png)
+![cs]({{ site.baseurl }}/assets/images/s68.png)
 
 Дополнение просит вас либо вручную создать файл конфигурации, либо воспользоваться редактором. Жмём на `editor` и создаём два поля.
 
@@ -105,7 +111,7 @@ $this->evo->documentObject
 
 Давайте пока что для отладки впишем в коды что-нибудь.
 
-![place codes](assets/images/s69.png)
+![place codes]({{ site.baseurl }}/assets/images/s69.png)
 
 ### Выведем в шаблон
 
@@ -123,7 +129,7 @@ $this->evo->documentObject
 
 Проверьте исходный код сайта
 
-![place codes](assets/images/s70.png)
+![place codes]({{ site.baseurl }}/assets/images/s70.png)
 
 Подобным образом можно давать клиенту безопасно и довольно гибко управлять различными изменяемыми областями на сайте.
 
