--- a/docs/003_Первоначальные настройки.md
+++ b/docs/003_Первоначальные настройки.md
@@ -78,7 +78,7 @@ return [
 
 Сначала открывайте "Системную информацию". Пусть остаётся открытой, отсюда вы будете копировать нужные значения.
 
-![sysinfo](assets/images/s21.png)
+![sysinfo]({{ site.baseurl }}/assets/images/s21.png)
 
 Откройте папку `evoblog.localhost\core\custom\` и найдите там файл `.env.example`.
 Сделайте копию и переименуйте её в `.env`.
@@ -126,7 +126,7 @@ MODX_MANAGER_URL=http://evoblog.localhost/manager/
 
 Теперь нужно немного настроить наш сайт. Ищите справа иконку шестерёнки и открывайте страницу "Системная конфигурация"
 
-![config](assets/images/s22.png)
+![config]({{ site.baseurl }}/assets/images/s22.png)
 
 Рекомендую неспеша сесть и изучить каждую вкладку этой страницы. Запоминать каждую опцию, разумеется, нет смысла. Однако вы хотя бы в общих чертах будете представлять, что можно настроить в системе.
 
@@ -161,7 +161,7 @@ return [
 
 Мы их только что видели - ключи указаны в "Системной конфигурации". Разумеется, в файле мы не пишем `[(фигурные скобки)]`, а копируем только значение (скобки это просто наследие версии Эво 1.4).
 
-![config](assets/images/s23.png)
+![config]({{ site.baseurl }}/assets/images/s23.png)
 
 Обратите внимание, что настройки, указанные в файле, переопределяют всё, что мы указываем в настройках админки. Они главнее.
 
@@ -228,7 +228,7 @@ return [
 
 Просто вводите эти названия в поисковую строку и жмите "Установить"
 
-![extras](assets/images/s24.png)
+![extras]({{ site.baseurl }}/assets/images/s24.png)
 
 В процессе разработки вы поймёте, какое дополнение нужно и для чего. Сейчас не будем заострять на этом внимания.
 
