--- a/docs/004_Структура сайта и шаблоны.md
+++ b/docs/004_Структура сайта и шаблоны.md
@@ -38,7 +38,7 @@ nav_order: 5
 
 Заходим в "Элементы"-"Шаблоны" и создаём новый шаблон.
 
-![templates](assets/images/s25.png)
+![templates]({{ site.baseurl }}/assets/images/s25.png)
 
 Обратите внимание на поле "псевдоним" и чекбокс "Создать файл шаблона при сохранении". Это нам обязательно будет нужно в дальнейшем.
 
@@ -57,7 +57,7 @@ nav_order: 5
 
 Сделайте эту работу и сравните результаты с моими.
 
-![created templates](assets/images/s26.png)
+![created templates]({{ site.baseurl }}/assets/images/s26.png)
 
 Разумеется, в дальнейшем вы вполне можете называть шаблоны так, как вам захочется. Это же справедливо и для поля "описание". А вот с псевдонимом я бы воздержался от дефисов и спецсимволов - могут возникнуть проблемы.
 
@@ -68,7 +68,7 @@ nav_order: 5
 Теперь пришло время создать черновую структуру сайта в админке.
 Слева в дереве вы уже видите первую страницу. Зайдите в редактирование и смените ей шаблон на "Главная страница".
 
-![edit template](assets/images/s27.png)
+![edit template]({{ site.baseurl }}/assets/images/s27.png)
 
 Поизучайте поля. Переименуйте"Заголовок" в "Главная страница блога". Поле "Расширенный заголовок" и поле "Пункт меню" очистите. Сохраните страницу.
 
@@ -76,7 +76,7 @@ nav_order: 5
 
 Теперь будем делать структуру сайта. Слева сверху найдите иконку "Новый ресурс" и, используя её, добавьте новый ресурс.
 
-![create resource](assets/images/s28.png)
+![create resource]({{ site.baseurl }}/assets/images/s28.png)
 
 Какая структура нам нужна?
 
@@ -91,13 +91,13 @@ nav_order: 5
 
 Для создания вложенных ресурсов типа тегов или постов в блоге нажмите на правую кнопку мыши на родительском ресурсе и в меню выберите "Дочерний ресурс".
 
-![create child](assets/images/s29.png)
+![create child]({{ site.baseurl }}/assets/images/s29.png)
 
 Кстати, для тегов и постов не обязательно указывать псевдоним, пусть cms генерирует его сама. Мы указали псевдонимы только для важных сущностей, таких так общая страница всех блогов, страница тегов, страница контактов.
 
 Давайте сравним, что получилось у меня и у вас:
 
-![structure](assets/images/s30.png)
+![structure]({{ site.baseurl }}/assets/images/s30.png)
 
 ## Зависимость URL от структуры <a name="part4"></a>
 
