--- a/docs/007_Выводим контент в шаблоне.md
+++ b/docs/007_Выводим контент в шаблоне.md
@@ -1,3 +1,9 @@
+---
+layout: default
+title: Выводим контент в шаблоне
+nav_order: 8
+---
+
 # Выводим контент в шаблоне
 
 Предварительно создайте десяток постов в блоге и заполните все поля, кроме тегов. В поле "аннотация" вставьте краткое содержание поста из 1-2 предложений.
@@ -74,7 +80,7 @@ $documentObject
 
 Где найти машинное наименование поля? В документации, в отладчике Trace(позже) или же просто проинспектировать документ:
 
-![inspect](assets/images/s46.png)
+![inspect]({{ site.baseurl }}/assets/images/s46.png)
 
 Таким образом, если мы захотим вывести аннотацию, то напишем
 
@@ -119,7 +125,7 @@ $documentObject
 
 Заполните "контакты" в админке, откройте и проверьте:
 
-![contacts](assets/images/s47.png)
+![contacts]({{ site.baseurl }}/assets/images/s47.png)
 
 ## Итог
 
