--- a/docs/014_Поиск по блогу.md
+++ b/docs/014_Поиск по блогу.md
@@ -1,3 +1,9 @@
+---
+layout: default
+title: Поиск по блогу в Evolution CMS
+nav_order: 15
+---
+
 # Поиск по блогу в Evolution CMS
 
 ## Оглавление
@@ -106,7 +112,7 @@ class SearchController extends BaseController{
 
 > Как и многие другие крутые решения, сниппет базируется на Доклистере. Прочтите документацию к нему.
 
-![search dump](assets/images/s65.png)
+![search dump]({{ site.baseurl }}/assets/images/s65.png)
 
 ## Шаблонизация результатов <a name="part4"></a>
 
@@ -191,7 +197,7 @@ $result = $this->evo->runSnippet('evoSearch', [
 
 В результатах есть фотография.
 
-![жёпка](assets/images/s66.png)
+![жёпка]({{ site.baseurl }}/assets/images/s66.png)
 
 ## Итого
 
