--- a/docs/006_Шаблон блога. Интеграция дизайна в Evolution CMS.md
+++ b/docs/006_Шаблон блога. Интеграция дизайна в Evolution CMS.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Шаблон блога. Интеграция дизайна в Evolution CMS
+title: Шаблон блога. Интеграция дизайна
 nav_order: 7
 ---
 
