--- a/docs/008_Контроллеры. Пакет main. Выводим анонсы записей в блоге, делаем пагинацию.md
+++ b/docs/008_Контроллеры. Пакет main. Выводим анонсы записей в блоге, делаем пагинацию.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Контроллеры. Пакет main. Выводим анонсы записей в блоге, делаем пагинацию
+title: Контроллеры. Пакет main. Анонсы записей, пагинация
 nav_order: 9
 ---
 
