--- a/docs/Гет Стартед/Гет Стартед.md
+++ b/docs/Гет Стартед/Гет Стартед.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Utilities
+title: Гет Стартед
 nav_order: 1.5
 has_children: true
-permalink: docs/utilities
+permalink: docs/Гет%20Стартед
 ---
 
 # Стартуем
