--- a/docs/Ну что, поехали!/000_Ну что, поехали!.md
+++ b/docs/Ну что, поехали!/000_Ну что, поехали!.md
@@ -6,6 +6,6 @@ has_children: true
 permalink: docs/go-work
 ---
 
-# ну что, поехали!
+# Ну что, поехали!
 
 Делаем базовые вещи, так сказать костак и основу будущего сайта.
