--- a/docs/Ну что, поехали!/000_Ну что, поехали!.md
+++ b/docs/Ну что, поехали!/000_Ну что, поехали!.md
@@ -8,4 +8,4 @@ permalink: docs/go-work
 
 # Ну что, поехали!
 
-Делаем базовые вещи, так сказать костак и основу будущего сайта.
+Делаем базовые вещи, так сказать костяк и основу будущего сайта.
