--- a/docs/003_Первоначальные настройки.md
+++ b/docs/003_Первоначальные настройки.md
@@ -242,4 +242,4 @@ return [
 
 ---
 
-Теперь переходим к самому интересному - [к шаблонизации и созданию структуры](/004_%D0%A1%D1%82%D1%80%D1%83%D0%BA%D1%82%D1%83%D1%80%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0%20%D0%B8%20%D1%88%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD%D1%8B.md) нашего блога.
+Теперь переходим к самому интересному - [к шаблонизации и созданию структуры]({{ site.baseurl }}{{ site.posts_dir }}/004_%D0%A1%D1%82%D1%80%D1%83%D0%BA%D1%82%D1%83%D1%80%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0%20%D0%B8%20%D1%88%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD%D1%8B.html) нашего блога.
