--- a/docs/006_Шаблон блога. Интеграция дизайна в Evolution CMS.md
+++ b/docs/006_Шаблон блога. Интеграция дизайна в Evolution CMS.md
@@ -56,7 +56,7 @@ nav_order: 7
 
 ## Вспоминаем про шаблоны
 
-На [четвёртом занятии](/004_%D0%A1%D1%82%D1%80%D1%83%D0%BA%D1%82%D1%83%D1%80%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0%20%D0%B8%20%D1%88%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD%D1%8B.md) мы делали шаблоны в админ-панели.
+На [четвёртом занятии]({{ site.baseurl }}{{ site.posts_dir }}/004_%D0%A1%D1%82%D1%80%D1%83%D0%BA%D1%82%D1%83%D1%80%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0%20%D0%B8%20%D1%88%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD%D1%8B.html) мы делали шаблоны в админ-панели.
 Мы даже использовали их, создавая структуру сайта.
 
 Давайте вспомним, что мы создали, но теперь обратите внимание на поле "Псевдоним".
@@ -469,4 +469,4 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 ---
 
-Теперь настало время оживить сайт и [выводить в шаблонах настоящее содержимое](/007_%D0%92%D1%8B%D0%B2%D0%BE%D0%B4%D0%B8%D0%BC%20%D0%BA%D0%BE%D0%BD%D1%82%D0%B5%D0%BD%D1%82%20%D0%B2%20%D1%88%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD%D0%B5.md).
+Теперь настало время оживить сайт и [выводить в шаблонах настоящее содержимое]({{ site.baseurl }}{{ site.posts_dir }}/007_%D0%92%D1%8B%D0%B2%D0%BE%D0%B4%D0%B8%D0%BC%20%D0%BA%D0%BE%D0%BD%D1%82%D0%B5%D0%BD%D1%82%20%D0%B2%20%D1%88%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD%D0%B5.html).
