--- a/docs/010_Сайдбар.md
+++ b/docs/010_Сайдбар.md
@@ -75,4 +75,4 @@ $this->data['posts_sidebar'] = $result->getDocs();
 
 ---
 
-Настала пора добавить то, без чего не бывает блога - [теги для постов](/011_%D0%A2%D0%B5%D0%B3%D0%B8%20%D0%B2%20%D0%B1%D0%BB%D0%BE%D0%B3%D0%B5%20%D0%BD%D0%B0%20Evolution%20CMS.md).
+Настала пора добавить то, без чего не бывает блога - [теги для постов]({{ site.baseurl }}{{ site.posts_dir }}/011_%D0%A2%D0%B5%D0%B3%D0%B8%20%D0%B2%20%D0%B1%D0%BB%D0%BE%D0%B3%D0%B5%20%D0%BD%D0%B0%20Evolution%20CMS.html).
