--- a/docs/012_Оптимизация кода и шаблонов.md
+++ b/docs/012_Оптимизация кода и шаблонов.md
@@ -240,4 +240,4 @@ public function render()
 
 ---
 
-Раз все сущности готовы,надо немного озаботиться сео и [сделать карту сайта](/013_XML%20%D0%B8%20HTML%20%D0%BA%D0%B0%D1%80%D1%82%D1%8B%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0.md)
+Раз все сущности готовы,надо немного озаботиться сео и [сделать карту сайта]({{ site.baseurl }}{{ site.posts_dir }}/013_XML%20%D0%B8%20HTML%20%D0%BA%D0%B0%D1%80%D1%82%D1%8B%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0.html)
