--- a/docs/014_Поиск по блогу.md
+++ b/docs/014_Поиск по блогу.md
@@ -205,4 +205,4 @@ $result = $this->evo->runSnippet('evoSearch', [
 
 ---
 
-Сама функциональность блога полностью реализована. Остаётся только "причесать" сайт - в таком виде его нельзя сдавать клиенту. [Приступим к мелочам](/015_%D0%9D%D0%B0%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BA%D1%80%D0%B0%D1%81%D0%BE%D1%82%D1%8B.md).
+Сама функциональность блога полностью реализована. Остаётся только "причесать" сайт - в таком виде его нельзя сдавать клиенту. [Приступим к мелочам]({{ site.baseurl }}{{ site.posts_dir }}/015_%D0%9D%D0%B0%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BA%D1%80%D0%B0%D1%81%D0%BE%D1%82%D1%8B.html).
