--- a/docs/014_Поиск по блогу.md
+++ b/docs/014_Поиск по блогу.md
@@ -18,17 +18,20 @@ nav_order: 15
 
 Сначала установим EvoSearch. Открывайте модуль Extras в админке, вводите в поиск название и устанавливайте.
 
-До самого первого запуска нужна индексация ресурсов. Это делается просто:
+До самого первого запуска нужна индексация ресурсов. Это делается просто.
 
-- открываем `Элементы-Плагины`, ищем там evoSearch и во вкладке "Конфигурация" и выставить параметры в плагине:
-  - Переиндексировать все = 1
-  - Первая строка переиндексации = 0
-  - Строк за сеанс индексировать = 100
-- Снимите чекбокс "Плагин отключен", сохраните плагин.
-- Откройте и сохраните любой документ.
-- Теперь можно вернуться в плагин и снова поправить параметры:
-  - Переиндексировать все = 0
-  - Строк за сеанс индексировать = 1
+Открываем `Элементы-Плагины`, ищем там evoSearch и во вкладке "Конфигурация" и выставить параметры в плагине:
+
+- Переиндексировать все = 1
+- Первая строка переиндексации = 0
+- Строк за сеанс индексировать = 100
+
+Далее, **снимите** чекбокс "Плагин отключен", и сохраните **плагин**. После этого, откройте и сохраните **любой** документ.
+
+Теперь можно вернуться в плагин и снова поправить параметры:
+
+- Переиндексировать все = 0
+- Строк за сеанс индексировать = 1
 
 ## Шаблоны и поиск <a name="part2"></a>
 
