--- a/docs/014_Поиск по блогу.md
+++ b/docs/014_Поиск по блогу.md
@@ -20,7 +20,7 @@ nav_order: 15
 
 До самого первого запуска нужна индексация ресурсов. Это делается просто.
 
-Открываем `Элементы-Плагины`, ищем там evoSearch и во вкладке "Конфигурация" и выставить параметры в плагине:
+Открываем `Элементы-Плагины`, ищем там **evoSearch** и во вкладке "Конфигурация" и выставляем параметры в плагине:
 
 - Переиндексировать все = 1
 - Первая строка переиндексации = 0
@@ -28,7 +28,7 @@ nav_order: 15
 
 Далее, **снимите** чекбокс "Плагин отключен", и сохраните **плагин**. После этого, откройте и сохраните **любой** документ.
 
-Теперь можно вернуться в плагин и снова поправить параметры:
+Теперь можно вернуться в плагин и снова поправить параметры, после чего сохранить плагин:
 
 - Переиндексировать все = 0
 - Строк за сеанс индексировать = 1
