--- a/docs/014_Поиск по блогу.md
+++ b/docs/014_Поиск по блогу.md
@@ -20,7 +20,7 @@ nav_order: 15
 
 До самого первого запуска нужна индексация ресурсов. Это делается просто.
 
-Открываем `Элементы-Плагины`, ищем там **evoSearch** и во вкладке "Конфигурация" и выставляем параметры в плагине:
+Открываем `Элементы-Плагины`, ищем там **evoSearch** и во вкладке "Конфигурация" выставляем параметры в плагине:
 
 - Переиндексировать все = 1
 - Первая строка переиндексации = 0
