--- a/docs/014_Поиск по блогу.md
+++ b/docs/014_Поиск по блогу.md
@@ -26,7 +26,7 @@ nav_order: 15
 - Первая строка переиндексации = 0
 - Строк за сеанс индексировать = 100
 
-Далее, **снимите** чекбокс "Плагин отключен", и сохраните **плагин**. После этого, откройте и сохраните **любой** документ.
+Далее, **снимите** чекбокс "Плагин отключен", и сохраните **плагин**. После этого, откройте и сохраните любой **документ** на сайте.
 
 Теперь можно вернуться в плагин и снова поправить параметры, после чего сохранить плагин:
 
