--- a/docs/006_Шаблон блога. Интеграция дизайна в Evolution CMS.md
+++ b/docs/006_Шаблон блога. Интеграция дизайна в Evolution CMS.md
@@ -42,7 +42,7 @@ nav_order: 7
 
 Так что открывайте `index.html` и смотрите, что мы будем делать.
 
-![templates]({{ site.baseurl }}/assets/images/s37.png)
+![templates](/evo3-blog-lessons/assets/images/s37.png)
 
 ## Копируем дизайн <a name="part2"></a>
 
@@ -50,13 +50,13 @@ nav_order: 7
 
 Создайте папку `template` в корне сайта, и скопируйте туда всё содержимое папки `dist` из репозитория.
 
-![templates]({{ site.baseurl }}/assets/images/s38.png)
+![templates](/evo3-blog-lessons/assets/images/s38.png)
 
 Файлы \*.html можно не копировать, они ни на что не влияют. Просто в дальнейшем так удобнее таскать оттуда кусочки кода.
 
 ## Вспоминаем про шаблоны
 
-На [четвёртом занятии]({{ site.baseurl }}{{ site.posts_dir }}/004_%D0%A1%D1%82%D1%80%D1%83%D0%BA%D1%82%D1%83%D1%80%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0%20%D0%B8%20%D1%88%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD%D1%8B.html) мы делали шаблоны в админ-панели.
+На [четвёртом занятии](/evo3-blog-lessons{{ site.posts_dir }}/004_%D0%A1%D1%82%D1%80%D1%83%D0%BA%D1%82%D1%83%D1%80%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0%20%D0%B8%20%D1%88%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD%D1%8B.html) мы делали шаблоны в админ-панели.
 Мы даже использовали их, создавая структуру сайта.
 
 Давайте вспомним, что мы создали, но теперь обратите внимание на поле "Псевдоним".
@@ -76,7 +76,7 @@ nav_order: 7
 
 Откройте папку `views` в корне сайта.
 
-![templates]({{ site.baseurl }}/assets/images/s39.png)
+![templates](/evo3-blog-lessons/assets/images/s39.png)
 
 Что-то знакомое - blogs, post, contacts.
 
@@ -95,7 +95,7 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 Откройте файл `main.blade.php`и напишите там слово "главная". Сохраните и перейдите на главную страницу вашего сайта.
 
-![templates]({{ site.baseurl }}/assets/images/s40.png)
+![templates](/evo3-blog-lessons/assets/images/s40.png)
 
 Попробуйте сделать то же самое с другими файлами.
 Если какой-то из шаблонов не работает, проверьте внимательно псевдоним и имя файла. Они должны быть одинаковы.
@@ -111,7 +111,7 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 Именно этим и занят шаблонизатор. Мы задаём некий "шаблон", размечаем его и определяем, в какой области что показывать.
 
-![templates]({{ site.baseurl }}/assets/images/s41.png)
+![templates](/evo3-blog-lessons/assets/images/s41.png)
 
 Я примерно показал на скрине, где будут изменяемые области: тайтл, сайдбар, заголовок и текст поста.
 
@@ -144,7 +144,7 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 Базовый шаблон на этом этапе больше не будем трогать, но обязательно к нему вернёмся.
 
-![templates]({{ site.baseurl }}/assets/images/s42.png)
+![templates](/evo3-blog-lessons/assets/images/s42.png)
 
 > Секция wrapper свернута для удобства - там код.
 
@@ -296,7 +296,7 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 А вот так выглядит папка `views`
 
-![templates]({{ site.baseurl }}/assets/images/s43.png)
+![templates](/evo3-blog-lessons/assets/images/s43.png)
 
 ## Шаблоны. Секции содержимого <a name="part9"></a>
 
@@ -441,11 +441,11 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 Проверьте себя. Главная страница должна содержать верстку всех постов:
 
-![templates]({{ site.baseurl }}/assets/images/s44.png)
+![templates](/evo3-blog-lessons/assets/images/s44.png)
 
 А страница поста - только разметку поста:
 
-![templates]({{ site.baseurl }}/assets/images/s45.png)
+![templates](/evo3-blog-lessons/assets/images/s45.png)
 
 Сделайте нечто похожее для оставшихся шаблонов.
 
@@ -469,4 +469,4 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 ---
 
-Теперь настало время оживить сайт и [выводить в шаблонах настоящее содержимое]({{ site.baseurl }}{{ site.posts_dir }}/007_%D0%92%D1%8B%D0%B2%D0%BE%D0%B4%D0%B8%D0%BC%20%D0%BA%D0%BE%D0%BD%D1%82%D0%B5%D0%BD%D1%82%20%D0%B2%20%D1%88%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD%D0%B5.html).
+Теперь настало время оживить сайт и [выводить в шаблонах настоящее содержимое](/evo3-blog-lessons{{ site.posts_dir }}/007_%D0%92%D1%8B%D0%B2%D0%BE%D0%B4%D0%B8%D0%BC%20%D0%BA%D0%BE%D0%BD%D1%82%D0%B5%D0%BD%D1%82%20%D0%B2%20%D1%88%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD%D0%B5.html).
