--- a/docs/009_Навигация по сайту.md
+++ b/docs/009_Навигация по сайту.md
@@ -9,7 +9,7 @@ nav_order: 10
 Давайте сделаем меню блога.
 В дизайне меню выводится в двух местах: шапка блога и боковая панель, которая выезжает по нажатию на "гамбургер" справа.
 
-![menu areas]({{ site.baseurl }}/assets/images/s55.png)
+![menu areas](/evo3-blog-lessons/assets/images/s55.png)
 
 Я планирую разместить в обоих местах абсолютно одинаковые ссылки: "Главная, Блоги, Теги, Контакты".
 
@@ -60,7 +60,7 @@ public function __construct()
 
 Давайте протестируем? Откройте любую страницу сайта и в панели Tracy зайдите во вкладку view
 
-![menu areas]({{ site.baseurl }}/assets/images/s71.png)
+![menu areas](/evo3-blog-lessons/assets/images/s71.png)
 
 Из-за особенностей DLMenu наша менюшка там лежит под индексом [0]. Это надо будет учесть. Раскройте какой-нибудь элемент и посмотрите, какие ключи в нём есть. Мы будем использовать новый ключ `url`, которого нет в обычном `getDocs`.
 
@@ -107,4 +107,4 @@ public function __construct()
 
 ---
 
-Пора добить последний кусочек сайта, который ещё не трогали - [сделаем сайдбар]({{ site.baseurl }}{{ site.posts_dir }}/010_%D0%A1%D0%B0%D0%B9%D0%B4%D0%B1%D0%B0%D1%80.html).
+Пора добить последний кусочек сайта, который ещё не трогали - [сделаем сайдбар](/evo3-blog-lessons{{ site.posts_dir }}/010_%D0%A1%D0%B0%D0%B9%D0%B4%D0%B1%D0%B0%D1%80.html).
