--- a/docs/014_Поиск по блогу.md
+++ b/docs/014_Поиск по блогу.md
@@ -115,7 +115,7 @@ class SearchController extends BaseController{
 
 > Как и многие другие крутые решения, сниппет базируется на Доклистере. Прочтите документацию к нему.
 
-![search dump](/evo3-blog-lessons/assets/images/s65.png)
+![search dump](evo3-blog-lessons/assets/images/s65.png)
 
 ## Шаблонизация результатов <a name="part4"></a>
 
@@ -200,7 +200,7 @@ $result = $this->evo->runSnippet('evoSearch', [
 
 В результатах есть фотография.
 
-![жёпка](/evo3-blog-lessons/assets/images/s66.png)
+![жёпка](evo3-blog-lessons/assets/images/s66.png)
 
 ## Итого
 
@@ -208,4 +208,4 @@ $result = $this->evo->runSnippet('evoSearch', [
 
 ---
 
-Сама функциональность блога полностью реализована. Остаётся только "причесать" сайт - в таком виде его нельзя сдавать клиенту. [Приступим к мелочам](/evo3-blog-lessons{{ site.posts_dir }}/015_%D0%9D%D0%B0%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BA%D1%80%D0%B0%D1%81%D0%BE%D1%82%D1%8B.html).
+Сама функциональность блога полностью реализована. Остаётся только "причесать" сайт - в таком виде его нельзя сдавать клиенту. [Приступим к мелочам](evo3-blog-lessons{{ site.posts_dir }}/015_%D0%9D%D0%B0%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BA%D1%80%D0%B0%D1%81%D0%BE%D1%82%D1%8B.html).
