--- a/docs/001_Введение. Нужные программы.md
+++ b/docs/001_Введение. Нужные программы.md
@@ -39,9 +39,9 @@ nav_order: 2
 
 Мои настройки выглядят так:
 
-![openserver settings](evo3-blog-lessons/assets/images/s1.png)
+![openserver settings](assets/images/s1.png)
 
-![openserver settings](evo3-blog-lessons/assets/images/s2.png)
+![openserver settings](/assets/images/s2.png)
 
 #### _Настройки домена_
 
