--- a/docs/007_Выводим контент в шаблоне.md
+++ b/docs/007_Выводим контент в шаблоне.md
@@ -80,7 +80,7 @@ $documentObject
 
 Где найти машинное наименование поля? В документации, в отладчике Trace(позже) или же просто проинспектировать документ:
 
-![inspect](evo3-blog-lessons/assets/images/s46.png)
+![inspect]({{ site.baseurl }}/assets/images/s46.png)
 
 Таким образом, если мы захотим вывести аннотацию, то напишем
 
@@ -125,7 +125,7 @@ $documentObject
 
 Заполните "контакты" в админке, откройте и проверьте:
 
-![contacts](evo3-blog-lessons/assets/images/s47.png)
+![contacts]({{ site.baseurl }}/assets/images/s47.png)
 
 ## Итог
 
@@ -134,4 +134,4 @@ $documentObject
 ---
 
 А как быть, если на главной странице, в сайдбаре или в блоге нужно вывести ленту всех материалов? Откуда взять данные для постов и пагинации, раз в documentObject только документ?
-За это отвечают [контроллеры](evo3-blog-lessons{{ site.posts_dir }}/008_%D0%9A%D0%BE%D0%BD%D1%82%D1%80%D0%BE%D0%BB%D0%BB%D0%B5%D1%80%D1%8B.%20%D0%9F%D0%B0%D0%BA%D0%B5%D1%82%20main.%20%D0%92%D1%8B%D0%B2%D0%BE%D0%B4%D0%B8%D0%BC%20%D0%B0%D0%BD%D0%BE%D0%BD%D1%81%D1%8B%20%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B5%D0%B9%20%D0%B2%20%D0%B1%D0%BB%D0%BE%D0%B3%D0%B5%2C%20%D0%B4%D0%B5%D0%BB%D0%B0%D0%B5%D0%BC%20%D0%BF%D0%B0%D0%B3%D0%B8%D0%BD%D0%B0%D1%86%D0%B8%D1%8E.html).
+За это отвечают [контроллеры]({{ site.baseurl }}{{ site.posts_dir }}/008_%D0%9A%D0%BE%D0%BD%D1%82%D1%80%D0%BE%D0%BB%D0%BB%D0%B5%D1%80%D1%8B.%20%D0%9F%D0%B0%D0%BA%D0%B5%D1%82%20main.%20%D0%92%D1%8B%D0%B2%D0%BE%D0%B4%D0%B8%D0%BC%20%D0%B0%D0%BD%D0%BE%D0%BD%D1%81%D1%8B%20%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B5%D0%B9%20%D0%B2%20%D0%B1%D0%BB%D0%BE%D0%B3%D0%B5%2C%20%D0%B4%D0%B5%D0%BB%D0%B0%D0%B5%D0%BC%20%D0%BF%D0%B0%D0%B3%D0%B8%D0%BD%D0%B0%D1%86%D0%B8%D1%8E.html).
