--- a/docs/001_Введение. Нужные программы.md
+++ b/docs/001_Введение. Нужные программы.md
@@ -39,7 +39,7 @@ nav_order: 2
 
 Мои настройки выглядят так:
 
-![openserver settings](images/s1.png)
+![openserver settings](../images/s1.png)
 
 ![openserver settings]({{ site.baseurl }}/assets/images/s2.png)
 
