--- a/docs/007_Выводим контент в шаблоне.md
+++ b/docs/007_Выводим контент в шаблоне.md
@@ -103,7 +103,7 @@ $documentObject
 
 Теперь мы можем спокойно выводить информацию на страницу блога или на страницу контакты.
 
-![post](/assets/images/s54.png)
+![post]({{ site.baseurl }}/assets/images/s54.png)
 
 С блогом справились, давайте сделаем контакты `contacts.blade.php`:
 
