--- a/docs/007_Выводим контент в шаблоне.md
+++ b/docs/007_Выводим контент в шаблоне.md
@@ -47,7 +47,7 @@ $documentObject
 Можно получить доступ к различным объектам, предоставляемым системой:
 
 ```php
-{!! $modx->getConfig('site_name) !!}
+{!! $modx->getConfig('site_name') !!}
 ```
 
 Или получить любое поле ресурса:
