--- a/docs/001_Введение. Нужные программы.md
+++ b/docs/001_Введение. Нужные программы.md
@@ -133,4 +133,4 @@ location ~* /\.(?!well-known/) {
 
 ---
 
-Если всё хорошо, переходите к [установке Evolution CMS]({{ site.baseurl }}{{ site.posts_dir }}/002_%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0%20Evolution%20CMS.html).
+Если всё хорошо, переходите к [установке Evolution CMS]({% link docs/002_Установка Evolution CMS.md %}).
