--- a/docs/008_Контроллеры. Пакет main. Выводим анонсы записей в блоге, делаем пагинацию.md
+++ b/docs/008_Контроллеры. Пакет main. Выводим анонсы записей в блоге, делаем пагинацию.md
@@ -521,4 +521,4 @@ class BlogsController extends BaseController {
 
 ---
 
-Мне надоело пользоваться кнопкой "Просмотр" в админке, чтобы перейти куда-то, давайте сделаем [навигационное меню на сайте]({{ site.baseurl }}{{ site.posts_dir }}/009_%D0%9D%D0%B0%D0%B2%D0%B8%D0%B3%D0%B0%D1%86%D0%B8%D1%8F%20%D0%BF%D0%BE%20%D1%81%D0%B0%D0%B9%D1%82%D1%83.html).
+Мне надоело пользоваться кнопкой "Просмотр" в админке, чтобы перейти куда-то, давайте сделаем [навигационное меню на сайте]({% link docs/009_Навигация по сайту.md %}).
