--- a/docs/009_Навигация по сайту.md
+++ b/docs/009_Навигация по сайту.md
@@ -107,4 +107,4 @@ public function __construct()
 
 ---
 
-Пора добить последний кусочек сайта, который ещё не трогали - [сделаем сайдбар]({{ site.baseurl }}{{ site.posts_dir }}/010_%D0%A1%D0%B0%D0%B9%D0%B4%D0%B1%D0%B0%D1%80.html).
+Пора добить последний кусочек сайта, который ещё не трогали - [сделаем сайдбар]({% link docs/010_Сайдбар.md %}).
