--- a/docs/004_Структура сайта и шаблоны.md
+++ b/docs/004_Структура сайта и шаблоны.md
@@ -137,4 +137,4 @@ return [
 
 ---
 
-Отлично. Теперь пора разобраться с ТВ-параметрами: добавить постам картинки, сеошные теги и разные мелочи. [Переходите к уроку про ТВ-параметры]({{ site.baseurl }}{{ site.posts_dir }}/005_%D0%A2%D0%92-%D0%BF%D0%B0%D1%80%D0%B0%D0%BC%D0%B5%D1%82%D1%80%D1%8B%20%D0%B2%20Evolution%20CMS.html).
+Отлично. Теперь пора разобраться с ТВ-параметрами: добавить постам картинки, сеошные теги и разные мелочи. [Переходите к уроку про ТВ-параметры]({% link docs/005_ТВ-параметры в Evolution CMS.md %}).
