--- a/docs/006_Шаблон блога. Интеграция дизайна в Evolution CMS.md
+++ b/docs/006_Шаблон блога. Интеграция дизайна в Evolution CMS.md
@@ -469,4 +469,4 @@ Evolution CMS сама сделала пустые файлы шаблонов, 
 
 ---
 
-Теперь настало время оживить сайт и [выводить в шаблонах настоящее содержимое]({{ site.baseurl }}{{ site.posts_dir }}/007_%D0%92%D1%8B%D0%B2%D0%BE%D0%B4%D0%B8%D0%BC%20%D0%BA%D0%BE%D0%BD%D1%82%D0%B5%D0%BD%D1%82%20%D0%B2%20%D1%88%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD%D0%B5.html).
+Теперь настало время оживить сайт и [выводить в шаблонах настоящее содержимое]({% link docs/007_Выводим контент в шаблоне.md %}).
