human-friendly-urls

--- a/docs/004_Структура сайта и шаблоны.md
+++ b/docs/004_Структура сайта и шаблоны.md
@@ -2,6 +2,8 @@
 layout: default
 title: Структура сайта и шаблоны
 nav_order: 5
+permalink: struktura-sajta-i-shablony
+slug: struktura-sajta-i-shablony
 ---
 
 # Структура сайта и шаблоны в Evolution CMS
