--- a/docs/006_Шаблон блога. Интеграция дизайна в Evolution CMS.md
+++ b/docs/006_Шаблон блога. Интеграция дизайна в Evolution CMS.md
@@ -2,6 +2,7 @@
 layout: default
 title: Шаблон блога. Интеграция дизайна
 nav_order: 7
+permalink: shablon-bloga-integraciya-dizajna
 ---
 
 # Шаблон блога. Интеграция дизайна в Evolution CMS
