--- a/docs/007_Выводим контент в шаблоне.md
+++ b/docs/007_Выводим контент в шаблоне.md
@@ -2,6 +2,7 @@
 layout: default
 title: Выводим контент в шаблоне
 nav_order: 8
+permalink: vyvodim-kontent-v-shablone
 ---
 
 # Выводим контент в шаблоне
