--- a/docs/008_Контроллеры. Пакет main. Выводим анонсы записей в блоге, делаем пагинацию.md
+++ b/docs/008_Контроллеры. Пакет main. Выводим анонсы записей в блоге, делаем пагинацию.md
@@ -2,6 +2,7 @@
 layout: default
 title: Контроллеры. Пакет main. Анонсы записей, пагинация
 nav_order: 9
+permalink: kontrollery-paket-main-anonsy-zapisej-paginaciya
 ---
 
 
