--- a/docs/012_Оптимизация кода и шаблонов.md
+++ b/docs/012_Оптимизация кода и шаблонов.md
@@ -2,6 +2,7 @@
 layout: default
 title: Оптимизация кода и шаблонов
 nav_order: 13
+permalink: optimizaciya-koda-i-shablonov
 ---
 
 # Оптимизация кода и шаблонов
