--- a/docs/014_Поиск по блогу.md
+++ b/docs/014_Поиск по блогу.md
@@ -2,6 +2,8 @@
 layout: default
 title: Поиск по блогу в Evolution CMS
 nav_order: 15
+permalink: poisk-po-blogu-v-evolution-cms
+slug: poisk-po-blogu-v-evolution-cms
 ---
 
 # Поиск по блогу в Evolution CMS
