--- a/docs/001_Введение. Нужные программы.md
+++ b/docs/001_Введение. Нужные программы.md
@@ -2,6 +2,7 @@
 layout: default
 title: Введение. Нужные программы
 nav_order: 2
+permalink: vvedenie-nuzhnye-programmy
 slug: vvedenie-nuzhnye-programmy
 ---
 
