--- a/docs/003_Первоначальные настройки.md
+++ b/docs/003_Первоначальные настройки.md
@@ -2,6 +2,7 @@
 layout: default
 title: Первоначальные настройки
 nav_order: 4
+permalink: pervonachalьnye-nastrojki
 slug: pervonachalnye-nastrojki
 ---
 
