Update 007_Выводим контент в шаблоне.md

--- a/docs/007_Выводим контент в шаблоне.md
+++ b/docs/007_Выводим контент в шаблоне.md
@@ -27,7 +27,7 @@ permalink: vyvodim-kontent-v-shablone
 Вы можете отобразить содержимое переменной name следующим образом:
 
 ```php
-Hello, {{{{ $name }}}}
+'Hello, {{ $name }}'
 ```
 
 ### Экранирование
