--- a/docs/007_Выводим контент в шаблоне.md
+++ b/docs/007_Выводим контент в шаблоне.md
@@ -21,13 +21,13 @@ permalink: vyvodim-kontent-v-shablone
 Шаблоны готовы, теперь нужно выводить информацию.
 
 Шаблоны Blade содержат HTML-теги и директивы Blade, которые позволяют выводить значения, использовать оператор "if-else", выполнять итерацию данных в цикле и многое другое.
-
+{% raw %}
 ### Переменные
 
 Вы можете отобразить содержимое переменной name следующим образом:
 
 ```php
-Hello, &lbrace;&lbrace; $name &rbrace;&rbrace;
+Hello, {{ $name }}
 ```
 
 ### Экранирование
@@ -94,13 +94,13 @@ $documentObject
 ```php
 {{ $modx->getConfig('site_name') }}
 ```
-
+{% endraw %}
 Откуда взялось `site_name` и что ещё можно вывести, вы, наверное, уже догадались. Если нет, подсказка в уроке номер три.
 
 Запоминаем:
 
-> Для документа `$documentObject`
-> Для конфигурации `$modx->getConfig`
+- Для документа `$documentObject`
+- Для конфигурации `$modx->getConfig`
 
 Теперь мы можем спокойно выводить информацию на страницу блога или на страницу контакты.
 
