--- a/docs/007_Выводим контент в шаблоне.md
+++ b/docs/007_Выводим контент в шаблоне.md
@@ -80,9 +80,9 @@ $documentObject
 > Обратите внимание, content выводится с другим синтаксисом. Там точно будут html-теги, и именно поэтому мы отключаем экранирование.
 
 Где найти машинное наименование поля? В документации, в отладчике Trace(позже) или же просто проинспектировать документ:
-
+{% endraw %}
 ![inspect]({{ site.baseurl }}/assets/images/s46.png)
-
+{% raw %}
 Таким образом, если мы захотим вывести аннотацию, то напишем
 
 ```php
